// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledAnimation renders correctly 1`] = `
<div
  className="sc-bwzfXH jxBZBR"
/>
`;

exports[`StyledKind renders correctly 1`] = `
<div
  className="sc-bdVaJa dtKJJt"
/>
`;
